--- a/section1.html
+++ b/section1.html
@@ -343,7 +343,7 @@
 
 					<div class="form-group">
 						<label>if yes, when was it paid last?  </label>
-						<input class="form-control" name="when_paid_last" type="text" placeholder="" />
+						<input class="form-control" name="when_paid_last_if_yes" type="text" placeholder="" />
 					</div>
 
                     <div class="form-group">
@@ -357,7 +357,7 @@
 
 					<div class="form-group">
 						<label>if yes, when was it paid last? </label>
-						<input class="form-control" name="when_paid_last" type="date" placeholder="" />
+						<input class="form-control" name="when_paid_last_if_yes" type="date" placeholder="" />
 					</div>
 					<div class="form-group">
 						<label>Other comment  </label>
