--- a/profile.html
+++ b/profile.html
@@ -309,8 +309,9 @@
 					<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 mb-30">
 						<div class="pd-20 card-box height-100-p">
 							<div class="profile-photo">
-								<a href="modal" data-toggle="modal" data-target="#modal" class="edit-avatar"><i
-										class="fa fa-pencil"></i></a>
+								<label for="profile_photo" class="edit-avatar"><i
+										class="fa fa-pencil"></i>
+									<input type="file" hidden id="profile_photo">	</label>
 								<img src="vendors/images/photo1.jpg" alt="" class="avatar-photo" />
 								<div class="modal fade" id="modal" tabindex="-1" role="dialog"
 									aria-labelledby="modalLabel" aria-hidden="true">
